<resources>
    <string name="app_name">FoDeIn</string>
    <string name="user_not_register">User not register.</string>
    <string name="user_registered">User registered.</string>
    <string name="process">Process!</string>
    <string name="profile_update">User profile updated.</string>
    <string name="profile_update_fail">User profile updated fail.</string>
    <string name="access_granted">Access granted.</string>
    <string name="access_not_allowed">Access not allowed.</string>
    <string name="database">fodein.realm</string>
    <string name="save_data">Data was successfully saved</string>
    <string name="delete_data">Data was successfully deleted</string>
    <string name="update_data">Data was updated correctly</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="select_photo">Select a photo</string>
    <string name="google_maps_key">AIzaSyDrRAU60StymUhYA0pKAvqP21Ew6FdAUmw</string>
    <string name="hint_text_email">Email</string>
    <string name="my_place">My Place</string>
    <string name="hint_text_name">Name</string>
    <string name="hint_text_description">Description</string>
    <string name="hint_text_user">User</string>
    <string name="hint_text_id_card">ID Card</string>
    <string name="hint_text_password">Password</string>
    <string name="hint_text_phone">Phone</string>
    <string name="hint_text_address">Address</string>
    <string name="lbl_logo_description">Logo</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_latitude">Latitude</string>
    <string name="lbl_longitude">Longitude</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_list_units">List of Units</string>
    <string name="lbl_new_form">New Form</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_list_projects">List of Projects</string>
    <string name="lbl_list_forms">List of Forms</string>
    <string name="invalid_name">Please enter a valid Name</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_phone">Please enter a valid Phone</string>
    <string name="invalid_form">Form Invalidated Successfully</string>
    <string name="data_sent">Data sent</string>
    <string name="register_not_found">The register not found</string>
    <string name="task_complete">Task Complete</string>
    <string name="add_pattern">Add Pattern</string>
    <string name="new_filter">New Filter</string>
    <string name="error_save_database">Error Save Database</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_annotation">Annotation</string>
    <string name="lbl_annotation_one">Annotation One</string>
    <string name="lbl_annotation_two">Annotation Two</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_list">List</string>
    <string name="lbl_close_app">Tap again to close the application.</string>
    <string name="lbl_connect_network">Connect network: </string>
    <string name="lbl_upload_form">Upload Form</string>
    <string name="lbl_update_image">Update Image</string>
</resources>
