<?xml version="1.0" encoding="utf-8"?>
<com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".10"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".90"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent="1"
            android:orientation="horizontal"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:focusable="true"
            android:src="@drawable/ic_person_add"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/lbl_logo_description"/>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_name"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_name"
                android:hint="@string/hint_text_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_user"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_name"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_user"
                android:hint="@string/hint_text_user"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_email"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_user"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_email"
                android:hint="@string/hint_text_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_password"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_email"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_password"
                android:hint="@string/hint_text_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_phone"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_password"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_phone"
                android:hint="@string/hint_text_phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.TextInputLayout"
            android:id="@+id/ti_address"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_phone"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline">

            <android.support.design.widget.TextInputEditText
                style="@style/Widget.TextEdit"
                android:id="@+id/et_address"
                android:hint="@string/hint_text_address"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative>
