<?xml version="1.0" encoding="utf-8"?>
<com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_sing_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_text_guideline"
            app:layout_constraintGuide_percent=".15"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            android:textAlignment="center"
            android:text="@string/lbl_sign_in"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_person"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:contentDescription="@string/lbl_logo_description" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/et_user"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_left"
            android:paddingEnd="@dimen/padding_right"
            android:hint="@string/hint_text_user"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_text_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_user"
            android:contentDescription="@string/lbl_logo_description" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_left"
            android:hint="@string/hint_text_password"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_text_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_user"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_send"
            android:text="@string/lbl_send"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>

    </android.support.constraint.ConstraintLayout>

</com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative>
