<?xml version="1.0" encoding="utf-8"?>
<com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_sing_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_center_guideline"
            app:layout_constraintGuide_percent=".45"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_center_guideline"
            app:layout_constraintGuide_percent=".55"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            android:textAlignment="center"
            android:text="@string/lbl_photo"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/iv_photo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:contentDescription="@string/lbl_logo_description" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_camera"
            android:text="@string/lbl_camera"
            android:background="@drawable/rounded_light_button"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_gallery"
            android:text="@string/lbl_gallery"
            android:background="@drawable/rounded_light_button"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/right_center_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_save"
            android:text="@string/lbl_save"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/bt_camera"/>

    </android.support.constraint.ConstraintLayout>

</com.mobile.fodein.presentation.view.component.ScrollViewPercentRelative>
